check for null data before persisting